syntax = "proto3";

message Task {
	string id = 1;
	string input_file = 2;
	string output_file = 3;
}

message Job {
	string id = 1;
	repeated Task task = 2;
}

enum OperationType {
	GET = 0;			// 
	PUT = 1;			// puts in dst_mgr
	REMOVE = 2;		// removes from src_mgr
}	

message Action {	
	message Manager {
		string name = 1; // populated by scheduler
		string uri = 2; // populated by storage master
	}

	message GetAction {
		string key = 1;
		Manager mgr = 2;
	}

	message CopyFromAction {
		string key = 1;
		Manager src_mgr = 2;
		Manager dst_mgr = 3;
	}

	message RemoveAction {
		string key = 1;
		Manager mgr = 2;	
	}

	message PutAction {
		string key = 1;
		Manager mgr = 2;
	}

	oneof action_type {
		GetAction get_action = 1;
		CopyFromAction copy_from_action = 2;
		RemoveAction remove_action = 3;
		PutAction put_action = 4;
	}
}

message Rule {	
	OperationType op_type = 1;
	string key = 2;
	repeated Action action = 4;
}

message Empty {}