syntax = "proto3";

import "proto/common.proto";

service ExecutionEngine {
	rpc Execute (Task) returns (Empty) {}
} 
